--- a/public/gastracker.html
+++ b/public/gastracker.html
@@ -93,6 +93,9 @@
                     <li class="mb-1">
 						<a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="explorer.html">Explorer</a>
 					</li>
+          <li class="mb-1">
+						<a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="https://nekowawolf.github.io/airdrop/" target="_blank">Airdrop</a>
+					</li>
 				</ul>
 			</div>
 		</nav>
