--- a/public/gastracker.html
+++ b/public/gastracker.html
@@ -30,38 +30,38 @@
   </div>
   <div class="sm:hidden hidden bg-gray-800 p-4" id="mobile-menu">
     <ul>
-      <li class="mb-2">
-        <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Overview</a>
-      </li>
-      <li class="mb-1">
-        <a href="index.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
-      </li>
-      <li class="mb-1">
-        <a href="contact.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
-      </li>
-      <li class="mb-1">
-        <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
-      </li>
-    </ul>
-    <ul>
-      <li class="mt-2 mb-2">
-        <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
-      </li>
-      <li class="mb-1">
-        <a href="#" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
-      </li>
-      <li class="mb-1">
-        <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
-      </li>
-    </ul>
-    <ul>
-      <li class="mt-2 mb-2">
-        <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Gas Tracker</a>
-      </li>
-      <li class="mb-1">
-        <a href="gastracker.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
-      </li>
-    </ul>
+        <li class="mb-2">
+          <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Overview</a>
+        </li>
+        <li class="mb-1">
+          <a href="index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
+        </li>
+        <li class="mb-1">
+          <a href="contact.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
+        </li>
+        <li class="mb-1">
+          <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
+        </li>
+      </ul>
+      <ul>
+        <li class="mt-2 mb-2">
+          <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
+        </li>
+        <li class="mb-1">
+          <a href="#" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+        </li>
+        <li class="mb-1">
+          <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
+        </li>
+      </ul>
+      <ul>
+        <li class="mt-2 mb-2">
+          <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Gas Tracker</a>
+        </li>
+        <li class="mb-1">
+          <a href="gastracker.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
+        </li>
+      </ul>
   </div>
   <div class="flex flex-col sm:flex-row h-screen">
     <nav class="bg-gray-800 w-full sm:w-64 p-4 hidden sm:block">
@@ -74,7 +74,7 @@
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Overview</a>
           </li>
           <li class="mb-1">
-            <a href="index.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
+            <a href="index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
           </li>
           <li class="mb-1">
             <a href="contact.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
@@ -99,22 +99,62 @@
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Gas Tracker</a>
           </li>
           <li class="mb-1">
-            <a href="gastracker.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
+            <a href="gastracker.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
           </li>
         </ul>
       </div>
     </nav>
+
+
+
+
+
+    <!-- halaman utama -->
     <main class="flex-1 p-8 overflow-auto">
       <div class="mb-8">
-        <h2 class="text-3xl font-bold">Overview</h2>
+        <h2 class="text-3xl font-bold">Ethereum ⛽ </h2>
       </div>
-      <div class="mb-4">
-        <p class="mb-4">Project X is the first EVM-compatible rollup that eliminates the need for gas entirely within the network.</p>
-        <img src="https://steamuserimages-a.akamaihd.net/ugc/449611652050198394/003B0F458420C44A75D10CBDC94A9C0B964C06F7/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="Project Image" class="mb-4">
-        <p class="mb-4">Despite the improvements in crypto UX, gas fees are still a significant barrier. Gas is complicated, confusing and painful. To overcome gas once and for all and effectively set a new standard for onchain UX, we leveraged the ZK Stack.</p>
-        <p class="mb-4">Project X will be completely gasless, meaning that any token can be used to pay network fees. We also designed a custom paymaster which will enable us to cover all transaction costs for our wallet users and is open to all dApp developers.</p>
+      <h1 id="timer" class="text-center mt-10 text-blue-600"></h1>
+      <div class=" mb-40 mt-2 flex flex-col sm:flex-row justify-center items-center ">
+        <div class="max-w-xs rounded overflow-hidden shadow-lg mx-4 my-4 bg-white">
+          <img class="" src="img/low.jpg" alt="" />
+          <div class="px-6 py-4">
+            <h1 class="font-bold text-xl mb-2 text-green-600 text-center">
+              Low
+            </h1>
+            <h1
+              id="safeGasPrice"
+              class="font-bold text-sm mb-2 text-black text-center"
+            ></h1>
+          </div>
+        </div>
+        <div class="max-w-xs rounded overflow-hidden shadow-lg mx-4 my-4 bg-white">
+            <img class="" src="img/average.png" alt="" />
+            <div class="px-6 py-4">
+              <h1 class="font-bold text-xl mb-2 text-yellow-600 text-center">
+                Average
+              </h1>
+              <h1
+                id="proposeGasPrice"
+                class="font-bold text-sm mb-2 text-black text-center"
+              ></h1>
+            </div>
+          </div>
+        <div class="max-w-xs rounded overflow-hidden shadow-lg mx-4 my-4 bg-white">
+          <img class="" src="img/high.png" alt="" />
+          <div class="px-6 py-4">
+            <h1 class="font-bold text-xl mb-2 text-red-600 text-center">
+              High
+            </h1>
+            <h1
+              id="fastGasPrice"
+              class="font-bold text-sm mb-2 text-black text-center"
+            ></h1>
+          </div>
+        </div>
       </div>
-    </main>
-  </div>
+
+
+<script src="js/gastracker.js"></script>
 </body>
 </html>
