update: nav margin

--- a/public/contact.html
+++ b/public/contact.html
@@ -17,7 +17,7 @@
 <body class="bg-gray-900 text-white">
   <!-- Mobile menu button -->
   <div class="sm:hidden bg-gray-800 w-full p-4 flex items-center justify-between">
-    <h1 class="text-2xl font-bold custom-underline">NDocs</h1>
+    <h1 class="text-2xl ml-4 font-bold custom-underline">NDocs</h1>
     <button type="button" onclick="toggleMenu()" class="text-gray-400 hover:text-white hover:bg-gray-700 p-2 rounded-md focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
       <span class="sr-only">Open main menu</span>
       <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -104,7 +104,7 @@
         </ul>
       </div>
     </nav>
-    <main class="flex-1 p-8 overflow-auto">
+    <main class=" xl:ml-10 flex-1 p-8 overflow-auto">
       <div class="mb-8">
         <h2 class="text-3xl font-bold">Contact</h2>
       </div>
