--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <body class="bg-gray-900 text-white">
   <!-- Mobile menu button -->
   <div class="sm:hidden bg-gray-800 w-full p-4 flex items-center justify-between">
-    <h1 class="text-2xl font-bold custom-underline">NDocs</h1>
+    <h1 class="text-2xl ml-4 font-bold custom-underline">NDocs</h1>
     <button type="button" onclick="toggleMenu()" class="text-gray-400 hover:text-white hover:bg-gray-700 p-2 rounded-md focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white">
       <span class="sr-only">Open main menu</span>
       <svg class="block h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -104,13 +104,13 @@
         </ul>
       </div>
     </nav>
-    <main class="flex-1 p-8 overflow-auto">
+    <main class="xl:ml-10 flex-1 p-8 overflow-auto">
       <div class="mb-8">
         <h2 class="text-3xl font-bold">Overview</h2>
       </div>
       <div class="mb-4">
         <p class="mb-4">Project X is the first EVM-compatible rollup that eliminates the need for gas entirely within the network.</p>
-        <img src="https://steamuserimages-a.akamaihd.net/ugc/449611652050198394/003B0F458420C44A75D10CBDC94A9C0B964C06F7/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="Project Image" class="mb-4">
+        <img src="https://steamuserimages-a.akamaihd.net/ugc/449611652050198394/003B0F458420C44A75D10CBDC94A9C0B964C06F7/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="" class="mb-4">
         <p class="mb-4">Despite the improvements in crypto UX, gas fees are still a significant barrier. Gas is complicated, confusing and painful. To overcome gas once and for all and effectively set a new standard for onchain UX, we leveraged the ZK Stack.</p>
         <p class="mb-4">Project X will be completely gasless, meaning that any token can be used to pay network fees. We also designed a custom paymaster which will enable us to cover all transaction costs for our wallet users and is open to all dApp developers.</p>
       </div>
