update: content intro

--- a/public/contact.html
+++ b/public/contact.html
@@ -109,10 +109,15 @@
         <h2 class="text-3xl font-bold">Contact</h2>
       </div>
       <div class="mb-4">
-        <p class="mb-4">Project X is the first EVM-compatible rollup that eliminates the need for gas entirely within the network.</p>
         <img src="https://i.gifer.com/2Y3b.gif" alt="" class="mb-4">
-        <p class="mb-4">Despite the improvements in crypto UX, gas fees are still a significant barrier. Gas is complicated, confusing and painful. To overcome gas once and for all and effectively set a new standard for onchain UX, we leveraged the ZK Stack.</p>
-        <p class="mb-4">Project X will be completely gasless, meaning that any token can be used to pay network fees. We also designed a custom paymaster which will enable us to cover all transaction costs for our wallet users and is open to all dApp developers.</p>
+        <p class="mb-4">Twitter: <a href="https://x.com/0xNekowawolf" target="_blank" class="text-blue-500 hover:underline">0xNekowawolf</a>
+        </p>
+        <p class="mb-4">Email: <a href="https://gmail.com/" target="_blank" class="text-blue-500 hover:underline">nekowawolf@gmail.com</a>
+        </p>
+        <p class="mb-4">Telegram: <a href="https://t.me/nekowawolf" target="_blank" class="text-blue-500 hover:underline">nekowawolf</a>
+        </p>
+        <p class="mb-4">Discord: <a href="https://discord.com/app" target="_blank" class="text-blue-500 hover:underline">nekowawolf#2003</a>
+        </p>
       </div>
     </main>
   </div>
