--- a/public/index.html
+++ b/public/index.html
@@ -109,10 +109,10 @@
         <h2 class="text-3xl font-bold">Overview</h2>
       </div>
       <div class="mb-4">
-        <p class="mb-4">Project X is the first EVM-compatible rollup that eliminates the need for gas entirely within the network.</p>
+        <p class="mb-4 max-w-3xl">Project X is the first EVM-compatible rollup that eliminates the need for gas entirely within the network.</p>
         <img src="https://steamuserimages-a.akamaihd.net/ugc/449611652050198394/003B0F458420C44A75D10CBDC94A9C0B964C06F7/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="" class="mb-4">
-        <p class="mb-4">Despite the improvements in crypto UX, gas fees are still a significant barrier. Gas is complicated, confusing and painful. To overcome gas once and for all and effectively set a new standard for onchain UX, we leveraged the ZK Stack.</p>
-        <p class="mb-4">Project X will be completely gasless, meaning that any token can be used to pay network fees. We also designed a custom paymaster which will enable us to cover all transaction costs for our wallet users and is open to all dApp developers.</p>
+        <p class="mb-4 max-w-3xl">Despite the improvements in crypto UX, gas fees are still a significant barrier. Gas is complicated, confusing and painful. To overcome gas once and for all and effectively set a new standard for onchain UX, we test you zk lol mending sare leveraged the ZK Stack.</p>
+        <p class="mb-4 max-w-3xl">Project X will be completely gasless, meaning that any token can be used to pay network fees. We also designed a custom paymaster which will enable us to cover all transaction costs for our wallet users and is open to all dApp developers.</p>
       </div>
     </main>
   </div>
