--- a/public/gastracker.html
+++ b/public/gastracker.html
@@ -48,7 +48,7 @@
           <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
         </li>
         <li class="mb-1">
-          <a href="#" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+          <a href="faucet.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
         </li>
         <li class="mb-1">
           <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
@@ -88,7 +88,7 @@
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
           </li>
           <li class="mb-1">
-            <a href="#" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+            <a href="faucet.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
