--- a/public/index.html
+++ b/public/index.html
@@ -45,10 +45,30 @@
     </ul>
     <ul>
       <li class="mt-2 mb-2">
+        <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Airdrop</a>
+      </li>
+      <li class="mb-1">
+        <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
+      </li>
+      <li class="mb-1">
+        <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
+      </li>
+      <li class="mb-1">
+        <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
+      </li>
+      <li class="mb-1">
+        <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
+      </li>
+    </ul>
+    <ul>
+      <li class="mt-2 mb-2">
         <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
       </li>
       <li class="mb-1">
         <a href="faucet.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+      </li>
+      <li class="mb-1">
+        <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
       </li>
       <li class="mb-1">
         <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
@@ -85,10 +105,30 @@
         </ul>
         <ul>
           <li class="mt-2 mb-2">
+            <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Airdrop</a>
+          </li>
+          <li class="mb-1">
+            <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
+          </li>
+          <li class="mb-1">
+            <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
+          </li>
+          <li class="mb-1">
+            <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
+          </li>
+          <li class="mb-1">
+            <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
+          </li>
+        </ul>
+        <ul>
+          <li class="mt-2 mb-2">
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
           </li>
           <li class="mb-1">
             <a href="faucet.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+          </li>
+          <li class="mb-1">
+            <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
