add: fear and greed index

--- a/public/fear-and-greed-index.html
+++ b/public/fear-and-greed-index.html
@@ -30,64 +30,64 @@
   </div>
   <div class="sm:hidden hidden bg-gray-800 p-4" id="mobile-menu">
     <ul>
-        <li class="mb-2">
-          <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Overview</a>
-        </li>
-        <li class="mb-1">
-          <a href="index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
-        </li>
-        <li class="mb-1">
-          <a href="contact.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
-        </li>
-        <li class="mb-1">
-          <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
-        </li>
-      </ul>
-      <ul>
-        <li class="mt-2 mb-2">
-          <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Airdrop</a>
-        </li>
-        <li class="mb-1">
-          <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
-        </li>
-        <li class="mb-1">
-          <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
-        </li>
-        <li class="mb-1">
-          <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
-        </li>
-        <li class="mb-1">
-          <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
-        </li>
-      </ul>
-      <ul>
-        <li class="mt-2 mb-2">
-          <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
-        </li>
-        <li class="mb-1">
-          <a href="faucet.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
-        </li>
-        <li class="mb-1">
-          <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
-        </li>
-        <li class="mb-1">
-          <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
-        </li>
-      </ul>
-      <ul>
-        <li class="mt-2 mb-2">
-          <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Gas Tracker</a>
-        </li>
-        <li class="mb-1">
-          <a href="gastracker.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
-        </li>
-        <li class="mb-1">
-          <a href="fear-and-greed-index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
-        </li>
-      </ul>
-  </div>
+      <li class="mb-2">
+        <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Overview</a>
+      </li>
+      <li class="mb-1">
+        <a href="index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
+      </li>
+      <li class="mb-1">
+        <a href="contact.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
+      </li>
+      <li class="mb-1">
+        <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
+      </li>
+    </ul>
+    <ul>
+      <li class="mt-2 mb-2">
+        <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Airdrop</a>
+      </li>
+      <li class="mb-1">
+        <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
+      </li>
+      <li class="mb-1">
+        <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
+      </li>
+      <li class="mb-1">
+        <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
+      </li>
+      <li class="mb-1">
+        <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
+      </li>
+    </ul>
+    <ul>
+      <li class="mt-2 mb-2">
+        <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
+      </li>
+      <li class="mb-1">
+        <a href="faucet.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+      </li>
+      <li class="mb-1">
+        <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
+      </li>
+      <li class="mb-1">
+        <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
+      </li>
+    </ul>
+    <ul>
+      <li class="mt-2 mb-2">
+        <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Gas Tracker</a>
+      </li>
+      <li class="mb-1">
+        <a href="gastracker.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
+      </li>
+      <li class="mb-1">
+        <a href="gastracker.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
+      </li>
+    </ul>
 
-  <!-- Dekstop UI/UX -->
+    <!-- Dekstop UI/UX -->
+  </div>
   <div class="flex flex-col sm:flex-row h-screen">
     <nav class="bg-gray-800 w-full sm:w-64 p-4 hidden sm:block overflow-y-auto">
       <div class="flex flex-col h-full">
@@ -102,7 +102,7 @@
             <a href="index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Intro</a>
           </li>
           <li class="mb-1">
-            <a href="contact.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
+            <a href="contact.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700 ">Contact</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
@@ -147,27 +147,28 @@
             <a href="gastracker.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
           </li>
           <li class="mb-1">
-            <a href="fear-and-greed-index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
+            <a href="fear-and-greed-index.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
           </li>
         </ul>
       </div>
     </nav>
-    <main class=" xl:ml-10 flex-1 p-8 overflow-auto">
+    <main class="xl:ml-10 flex-1 p-8 overflow-auto">
       <div class="mb-8">
-        <h2 class="text-3xl font-bold">Contact</h2>
+        <h2 class="text-3xl font-bold">Crypto Fear & Greed Index</h2>
       </div>
       <div class="mb-4">
-        <img src="https://i.gifer.com/2Y3b.gif" alt="" class="mb-4">
-        <p class="mb-4">Twitter: <a href="https://x.com/0xNekowawolf" target="_blank" class="text-blue-500 hover:underline">0xNekowawolf</a>
-        </p>
-        <p class="mb-4">Email: <a href="https://gmail.com/" target="_blank" class="text-blue-500 hover:underline">nekowawolf@gmail.com</a>
-        </p>
-        <p class="mb-4">Telegram: <a href="https://t.me/nekowawolf" target="_blank" class="text-blue-500 hover:underline">nekowawolf</a>
-        </p>
-        <p class="mb-4">Discord: <a href="https://discord.com/app" target="_blank" class="text-blue-500 hover:underline">nekowawolf#2003</a>
-        </p>
+        <img src="https://alternative.me/crypto/fear-and-greed-index.png" alt="" class="mb-4 w-full md:w-4/12 ">
+        <div class="bg-white p-6 rounded-lg shadow-lg text-center w-full md:w-4/12">
+            <h2 class="text-2xl font-semibold mb-4">Next Update</h2>
+            <p class="text-gray-700 mb-2">The next update will happen in:</p>
+            <p id="timer" class="text-lg font-medium text-gray-900">24 hours, 0 minutes, 0 seconds.</p>
+          </div>
+        <p class="hidden mb-4 max-w-3xl">Despite the improvements in crypto UX, gas fees are still a significant barrier. Gas is complicated, confusing and painful. To overcome gas once and for all and effectively set a new standard for onchain UX, we test you zk lol mending sare leveraged the ZK Stack.</p>
       </div>
     </main>
   </div>
+
+
+  <script src="js/fngindex.js"></script>
 </body>
 </html>
