--- a/public/index.html
+++ b/public/index.html
@@ -81,10 +81,15 @@
       <li class="mb-1">
         <a href="gastracker.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
       </li>
+      <li class="mb-1">
+        <a href="fear-and-greed-index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
+      </li>
     </ul>
+
+    <!-- Dekstop UI/UX -->
   </div>
   <div class="flex flex-col sm:flex-row h-screen">
-    <nav class="bg-gray-800 w-full sm:w-64 p-4 hidden sm:block">
+    <nav class="bg-gray-800 w-full sm:w-64 p-4 hidden sm:block overflow-y-auto">
       <div class="flex flex-col h-full">
         <div class="hidden sm:flex items-center justify-between mb-4">
           <h1 class="ml-4 text-2xl font-bold custom-underline">NDocs</h1>
@@ -140,6 +145,9 @@
           </li>
           <li class="mb-1">
             <a href="gastracker.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
+          </li>
+          <li class="mb-1">
+            <a href="fear-and-greed-index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
           </li>
         </ul>
       </div>
