update: fngindex.js

--- a/public/faucet.html
+++ b/public/faucet.html
@@ -81,10 +81,10 @@
       <li class="mb-1">
         <a href="gastracker.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
       </li>
+      <li class="mb-1">
+        <a href="fear-and-greed-index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
+      </li>
     </ul>
-    <li class="mb-1">
-      <a href="fear-and-greed-index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
-    </li>
   </div>
 
   <!-- Dekstop UI/UX -->
@@ -113,13 +113,13 @@
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Airdrop</a>
           </li>
           <li class="mb-1">
-            <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
+            <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
           </li>
           <li class="mb-1">
-            <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
+            <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
           </li>
           <li class="mb-1">
-            <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
+            <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
@@ -130,10 +130,10 @@
             <a class="text-white block py-2 px-4 rounded-md text-sm font-bold ">Faucet</a>
           </li>
           <li class="mb-1">
-            <a href="#" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
+            <a href="faucet.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
           </li>
           <li class="mb-1">
-            <a href="" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
+            <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
