--- a/public/fear-and-greed-index.html
+++ b/public/fear-and-greed-index.html
@@ -159,7 +159,7 @@
       <div class="mb-4">
         <img src="https://alternative.me/crypto/fear-and-greed-index.png" alt="" class="mb-4 w-full md:w-4/12 ">
         <div class="bg-white p-6 rounded-lg shadow-lg text-center w-full md:w-4/12">
-            <h2 class="text-2xl font-semibold mb-4">Next Update</h2>
+            <h2 class="text-2xl text-black font-semibold mb-4">Next Update</h2>
             <p class="text-gray-700 mb-2">The next update will happen in:</p>
             <p id="timer" class="text-lg font-medium text-gray-900">24 hours, 0 minutes, 0 seconds.</p>
           </div>
