--- a/public/fear-and-greed-index.html
+++ b/public/fear-and-greed-index.html
@@ -158,12 +158,14 @@
       </div>
       <div class="mb-4">
         <img src="https://alternative.me/crypto/fear-and-greed-index.png" alt="" class="mb-4 w-full md:w-4/12 ">
-        <div class="bg-white p-6 rounded-lg shadow-lg text-center w-full md:w-4/12">
-            <h2 class="text-2xl text-black font-semibold mb-4">Next Update</h2>
-            <p class="text-gray-700 mb-2">The next update will happen in:</p>
-            <p id="timer" class="text-lg font-medium text-gray-900">24 hours, 0 minutes, 0 seconds.</p>
-          </div>
-        <p class="hidden mb-4 max-w-3xl">Despite the improvements in crypto UX, gas fees are still a significant barrier. Gas is complicated, confusing and painful. To overcome gas once and for all and effectively set a new standard for onchain UX, we test you zk lol mending sare leveraged the ZK Stack.</p>
+        <div class="bg-white p-6 rounded-lg shadow-lg text-center w-full md:w-4/12" id="fng-card">
+          <h2 class="text-2xl font-semibold mb-4 text-black">Next Update</h2>
+          <p class="text-black font-semibold mb-2">The next update will happen in:</p>
+          <p class="text-sm text-gray-900"><span id="time_until_update">Loading...</span></p>
+      </div>
+        <p class="mt-8 mb-4 max-w-3xl font-bold">Why Measure Fear and Greed?</p>   
+        <p class="mb-4 max-w-3xl">The crypto market behaviour is very emotional. People tend to get greedy when the market is rising which results in FOMO (Fear of missing out). Also, people often sell their coins in irrational reaction of seeing red numbers. With our Fear and Greed Index, we try to save you from your own emotional overreactions. There are two simple assumptions</p>
+        <p class="mb-4 max-w-3xl">API form : <a href="https://api.alternative.me/" target="_blank" class="text-blue-500 hover:underline">https://api.alternative.me/</a></p>
       </div>
     </main>
   </div>
