--- a/public/fear-and-greed-index.html
+++ b/public/fear-and-greed-index.html
@@ -165,7 +165,7 @@
       </div>
         <p class="mt-8 mb-4 max-w-3xl font-bold">Why Measure Fear and Greed?</p>   
         <p class="mb-4 max-w-3xl">The crypto market behaviour is very emotional. People tend to get greedy when the market is rising which results in FOMO (Fear of missing out). Also, people often sell their coins in irrational reaction of seeing red numbers. With our Fear and Greed Index, we try to save you from your own emotional overreactions. There are two simple assumptions</p>
-        <p class="mb-4 max-w-3xl">API form : <a href="https://api.alternative.me/" target="_blank" class="text-blue-500 hover:underline">https://api.alternative.me/</a></p>
+        <p class="mb-4 max-w-3xl">API form : <a href="https://alternative.me/crypto/api/" target="_blank" class="text-blue-500 hover:underline">https://alternative.me/crypto/api/</a></p>
       </div>
     </main>
   </div>
