--- a/public/gastracker.html
+++ b/public/gastracker.html
@@ -201,7 +201,11 @@
           </div>
         </div>
       </div>
-
+      <div class="mb-8">
+        <p class="mt-2 mb-4 max-w-3xl font-bold">What is Ethereum Gas Fees?</p>
+        <p class="mb-4 max-w-3xl">Gas refers to the fee required to successfully conduct a transaction on the Ethereum blockchain. Gas fees are paid in Ether (ETH) and denominated in Gwei</p>
+        <p class="mb-4 max-w-3xl">API form : <a href="https://docs.etherscan.io/" target="_blank" class="text-blue-500 hover:underline">https://docs.etherscan.io/</a></p>
+      </div>
 
 <script src="js/gastracker.js"></script>
 </body>
