--- a/public/index.html
+++ b/public/index.html
@@ -157,10 +157,10 @@
         <h2 class="text-3xl font-bold">Overview</h2>
       </div>
       <div class="mb-4">
-        <p class="mb-4 max-w-3xl">Project X is the first EVM-compatible rollup that eliminates the need for gas entirely within the network.</p>
+        <p class="mb-4 max-w-3xl">プロジェクトXは、ネットワーク内でガスの必要性を完全に排除した初のEVM対応ロールアップである。</p>
         <img src="https://steamuserimages-a.akamaihd.net/ugc/449611652050198394/003B0F458420C44A75D10CBDC94A9C0B964C06F7/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="" class="mb-4">
-        <p class="mb-4 max-w-3xl">Despite the improvements in crypto UX, gas fees are still a significant barrier. Gas is complicated, confusing and painful. To overcome gas once and for all and effectively set a new standard for onchain UX, we test you zk lol mending sare leveraged the ZK Stack.</p>
-        <p class="mb-4 max-w-3xl">Project X will be completely gasless, meaning that any token can be used to pay network fees. We also designed a custom paymaster which will enable us to cover all transaction costs for our wallet users and is open to all dApp developers.</p>
+        <p class="mb-4 max-w-3xl">暗号のUXが改善されたにもかかわらず、ガス料金は依然として大きな障壁となっている。ガスは複雑で、分かりにくく、苦痛を伴います。ガス料金を克服し、オンチェーンUXの新たな標準を効果的に設定するために、私たちはZKスタックを活用してzkをテストします。</p>
+        <p class="mb-4 max-w-3xl">プロジェクトXは完全にガスレスで、どのトークンもネットワーク料金の支払いに使用できる。私たちはまた、私たちのウォレットユーザーのためのすべてのトランザクションコストをカバーすることを可能にするカスタムペイマスターを設計し、すべてのdApp開発者に公開されています。</p>
       </div>
     </main>
   </div>
