--- a/public/airdroplist.html
+++ b/public/airdroplist.html
@@ -51,7 +51,7 @@
         <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
       </li>
       <li class="mb-1">
-        <a href="airdroplist.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
+        <a href="airdroplist.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
       </li>
       <li class="mb-1">
         <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
@@ -82,7 +82,7 @@
         <a href="gastracker.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
       </li>
       <li class="mb-1">
-        <a href="gastracker.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
+        <a href="fear-and-greed-index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
       </li>
     </ul>
 
@@ -116,7 +116,7 @@
             <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">What Airdrop</a>
           </li>
           <li class="mb-1">
-            <a href="airdroplist.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
+            <a href="airdroplist.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Airdrop List</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Results</a>
@@ -133,7 +133,7 @@
             <a href="faucet.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Claim Faucet</a>
           </li>
           <li class="mb-1">
-            <a class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
+            <a  class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">RPC</a>
           </li>
           <li class="mb-1">
             <a class="text-gray-800 block py-2 px-4 rounded-md text-sm font-medium custom-underline"></a>
@@ -147,30 +147,22 @@
             <a href="gastracker.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Ethereum</a>
           </li>
           <li class="mb-1">
-            <a href="fear-and-greed-index.html" class="text-blue-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
+            <a href="fear-and-greed-index.html" class="text-gray-400 block py-2 px-4 rounded-md text-sm font-medium hover:bg-gray-700">Fear & Greed</a>
           </li>
         </ul>
       </div>
     </nav>
     <main class="xl:ml-10 flex-1 p-8 overflow-auto">
       <div class="mb-8">
-        <h2 class="text-3xl font-bold">Crypto Fear & Greed Index</h2>
+        <h2 class="text-3xl font-bold">Overview</h2>
       </div>
       <div class="mb-4">
-        <img src="https://alternative.me/crypto/fear-and-greed-index.png" alt="" class="mb-4 w-full md:w-4/12 ">
-        <div class="bg-white p-6 rounded-lg shadow-lg text-center w-full md:w-4/12" id="fng-card">
-          <h2 class="text-2xl font-semibold mb-4 text-black">Next Update</h2>
-          <p class="text-black font-semibold mb-2">The next update will happen in:</p>
-          <p class="text-sm text-gray-900"><span id="time_until_update">Loading...</span></p>
-      </div>
-        <p class="mt-8 mb-4 max-w-3xl font-bold">Why Measure Fear and Greed?</p>   
-        <p class="mb-4 max-w-3xl">The crypto market behaviour is very emotional. People tend to get greedy when the market is rising which results in FOMO (Fear of missing out). Also, people often sell their coins in irrational reaction of seeing red numbers. With our Fear and Greed Index, we try to save you from your own emotional overreactions. There are two simple assumptions</p>
-        <p class="mb-4 max-w-3xl">API form : <a href="https://alternative.me/crypto/api/" target="_blank" class="text-blue-500 hover:underline">https://alternative.me/crypto/api/</a></p>
+        <p class="mb-4 max-w-3xl">プロジェクトXは、ネットワーク内でガスの必要性を完全に排除した初のEVM対応ロールアップである。</p>
+        <img src="https://steamuserimages-a.akamaihd.net/ugc/449611652050198394/003B0F458420C44A75D10CBDC94A9C0B964C06F7/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="" class="mb-4">
+        <p class="mb-4 max-w-3xl">暗号のUXが改善されたにもかかわらず、ガス料金は依然として大きな障壁となっている。ガスは複雑で、分かりにくく、苦痛を伴います。ガス料金を克服し、オンチェーンUXの新たな標準を効果的に設定するために、私たちはZKスタックを活用してzkをテストします。</p>
+        <p class="mb-4 max-w-3xl">プロジェクトXは完全にガスレスで、どのトークンもネットワーク料金の支払いに使用できる。私たちはまた、私たちのウォレットユーザーのためのすべてのトランザクションコストをカバーすることを可能にするカスタムペイマスターを設計し、すべてのdApp開発者に公開されています。</p>
       </div>
     </main>
   </div>
-
-
-  <script src="js/fngindex.js"></script>
 </body>
 </html>
