update: content airdroplist add dawn

--- a/public/airdroplist.html
+++ b/public/airdroplist.html
@@ -154,14 +154,29 @@
     </nav>
     <main class="xl:ml-10 flex-1 p-8 overflow-auto">
       <div class="mb-8">
-        <h2 class="text-3xl font-bold">Overview</h2>
+        <h2 class="text-3xl font-bold">Airdrop List</h2>
       </div>
       <div class="mb-4">
-        <p class="mb-4 max-w-3xl">プロジェクトXは、ネットワーク内でガスの必要性を完全に排除した初のEVM対応ロールアップである。</p>
-        <img src="https://steamuserimages-a.akamaihd.net/ugc/449611652050198394/003B0F458420C44A75D10CBDC94A9C0B964C06F7/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="" class="mb-4">
-        <p class="mb-4 max-w-3xl">暗号のUXが改善されたにもかかわらず、ガス料金は依然として大きな障壁となっている。ガスは複雑で、分かりにくく、苦痛を伴います。ガス料金を克服し、オンチェーンUXの新たな標準を効果的に設定するために、私たちはZKスタックを活用してzkをテストします。</p>
-        <p class="mb-4 max-w-3xl">プロジェクトXは完全にガスレスで、どのトークンもネットワーク料金の支払いに使用できる。私たちはまた、私たちのウォレットユーザーのためのすべてのトランザクションコストをカバーすることを可能にするカスタムペイマスターを設計し、すべてのdApp開発者に公開されています。</p>
-      </div>
+        <div class="mt-4">
+          <h2 id="sepolia" class="mb-4 text-2xl font-bold">Andrena (DAWN)</h2>
+        </div>
+        <img src="https://pbs.twimg.com/media/GUYLM1TbAAAunwF?format=jpg&name=large" alt="" class="mb-4 w-full md:w-1/2 ">
+        <p class="mb-4 max-w-3xl">DAWN aims to transform internet access similarly to how solar panels transformed electricity, enabling consumers to own, generate, and sell their own internet service. Now DAWN has launched a testnet, where we can use the Internet in normal mode and get points for it. Grass and Nodepay have a similar activity.</p>
+        <p class="mb-4 max-w-3xl font-bold">DAWN Guide</p>
+        <p class="mb-4 max-w-3xl">
+            <ol class="list-decimal pl-4">
+              <li class="mb-2">Install the Dawn 
+                <a href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp" target="_blank" class="text-blue-500 hover:underline">extension</a><a>.</a>
+              </li>
+              <li class="mb-2 max-w-3xl">Click the Register button in the extension and enter the code <b>hzyzqj</b> <br> (you won't be able to log into the app without it):</li>
+              <img src="img/dawn1.png" alt="" class="mb-4 w-full md:w-1/2 ">
+              <li class="mb-2 max-w-3xl">Confirm your registration at the mail.</li>
+              <li class="mb-2 max-w-3xl">Open the extension again and log in to your account. If everything was successful, you will see a similar window:</li>
+              <img src="img/dawn2.png" alt="" class="mb-4 w-72 ">
+              <p class="mb-4 max-w-3xl">For more rewards, click Boost rewards. Here you can invite friends and complete tasks.</p>
+            </ol>
+          </p>
+          </div>
     </main>
   </div>
 </body>
