update: content faucet

--- a/public/airdroplist.html
+++ b/public/airdroplist.html
@@ -166,7 +166,7 @@
         <p class="mb-4 max-w-3xl">
             <ol class="list-decimal pl-4">
               <li class="mb-2">Install the Dawn 
-                <a href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp" target="_blank" class="text-blue-500 hover:underline">extension</a><a>.</a>
+                <a href="https://chromewebstore.google.com/detail/dawn-validator-chrome-ext/fpdkjdnhkakefebpekbdhillbhonfjjp" target="_blank" class="text-blue-500 hover:underline">extension</a>.</a>
               </li>
               <li class="mb-2 max-w-3xl">Click the Register button in the extension and enter the code <b>hzyzqj</b> <br> (you won't be able to log into the app without it):</li>
               <img src="img/dawn1.png" alt="" class="mb-4 w-full md:w-1/2 ">
