--- a/public/faucet.html
+++ b/public/faucet.html
@@ -168,15 +168,15 @@
         <p class="mb-4 max-w-3xl ">Using Infura or Alchemy, you can request ETH testnet tokens to test your smart contract on Sepolia.</p>
         <p class="mb-4 max-w-3xl">
             <ol class="list-decimal pl-4">
-              <li>Go to 
+              <li class="mb-2 max-w-3xl">Go to 
                 <a href="https://www.infura.io/faucet/sepolia" target="_blank" class="text-blue-500 hover:underline">infura.io/faucet/sepolia</a> or 
-                <a href="https://www.alchemy.com/faucets/ethereum-sepolia" target="_blank" class="text-blue-500 hover:underline">alchemy.com/faucets/ethereum-sepolia</a>
+                <a href="https://www.alchemy.com/faucets/ethereum-sepolia" target="_blank" class="text-blue-500 hover:underline">alchemy.com/faucets/ethereum-sepolia</a>.</a>
               </li>
-              <li>Login/Signup</li>
-              <li>Make sure you have selected the Ethereum Sepolia</li>
-              <li>Have at least 0.001ETH to be able to claim the faucet</li>
-              <li>Solve captcha</li>
-              <li>Claim</li>
+              <li class="mb-2 max-w-3xl">Login/Signup.</li>
+              <li class="mb-2 max-w-3xl">Make sure you have selected the Ethereum Sepolia.</li>
+              <li class="mb-2 max-w-3xl">Have at least 0.001ETH to be able to claim the faucet.</li>
+              <li class="mb-2 max-w-3xl">Solve captcha.</li>
+              <li class="mb-2 max-w-3xl">Claim.</li>
             </ol>
           </p>
           <div class="mt-24">
